<resources>
    <string name="app_name">Dnd App part 2 (i messed up)</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="_1d20">1d20</string>
    <string name="_1d4">1d4</string>
    <string name="_1d6">1d6</string>
    <string name="_1d8">1d8</string>
    <string name="_1d10">1d10</string>
    <string name="_1d12">1d12</string>
    <string name="_1d100">1d100</string>
    <string name="waiting_for_roll">waiting_for_roll</string>
    <string name="wisdom_score">Wisdom Score</string>
    <string name="level">Level</string>
    <string name="name">Name</string>
    <string name="class">Class</string>
    <string name="proficiency">Proficiency</string>
    <string name="strength_score">Strength score</string>
    <string name="dexterity_score">Dexterity Score</string>
    <string name="constitution_score">Constitution Score</string>
    <string name="charisma_score">Charisma Score</string>
    <string name="intelligence_score">Intelligence Score</string>
    <string name="speed">Speed</string>
    <string name="enter_inventory_below">Enter Inventory below</string>
</resources>
